
By: smueller on 2006/10/12
    * _install_or_uninstall tries to remove the temporary directory
      while cwd() is in that directory. That fails on win32 leaving
      temporary directories on disk. This is now fixed.
    * This is 0.21
____________________________________________________________________________
By: smueller on 2006/10/11
    * Added a more flexible way of using PAR::Dist::install_par's
      custom target logic.
    * This is 0.20
____________________________________________________________________________
By: smueller on 2006/10/02
    * Repaired PAR::Dist::install_par's custom target logic.
____________________________________________________________________________
By: smueller on 2006/09/03
Log:
    * It's not possible to specify your own installation paths.
    * Installation paths now documented.
    * This is 0.19.
____________________________________________________________________________
By: smueller on 2006/08/28
Log:
    * Added optional POD tests.
____________________________________________________________________________
By: smueller on 2006/08/25
Log:
    * Added the generate_blib_stub method.
    * Added parse_dist_name to @EXPORT_OK
    * Upgraded Module::Install to 0.64
    * This is PAR::Dist 0.18.
____________________________________________________________________________
By: smueller on 2006/08/23
Log:
    * Fixed merge_par for relative paths.
    * This is PAR::Dist 0.17.
____________________________________________________________________________
By: smueller on 2006/08/09
Log:
    * Fixed tests for parse_dist_name.
    * Release 0.15_02
____________________________________________________________________________
By: smueller on 2006/08/02
Log:
    * Added the parse_dist_name routine which was previously shipped with
      both PAR::Repository and PAR::Repository::Client.
    * Changed the distribution name detection heuristics to favour the
      distribution name determined from META.yml and then those from